Story Location missalignment fix

--- a/public_html/wp-content/themes/transcribathon/css/item-page.css
+++ b/public_html/wp-content/themes/transcribathon/css/item-page.css
@@ -1300,6 +1300,7 @@ p.mb-1 {
     height: 25px;
     margin-bottom: 20px;
     margin-top: 45px;
+    border-radius: 0!important;
 }
 .panel-right #full-view-map {
     width: 99%;
